Program4/program4.output
Grammar

    0 $accept: input $end

    1 input: program

    2 program: classdec
    3        | program classdec

    4 classdec: CLASS ID classbody

    5 classbody: LBRACE vardecs constdecs methdecs RBRACE
    6          | LBRACE constdecs methdecs RBRACE
    7          | LBRACE vardecs methdecs RBRACE
    8          | LBRACE vardecs constdecs RBRACE
    9          | LBRACE vardecs RBRACE
   10          | LBRACE constdecs RBRACE
   11          | LBRACE methdecs RBRACE
   12          | LBRACE RBRACE
   13          | error LBRACE

   14 vardecs: vardec
   15        | vardecs vardec

   16 vardec: typeid SEMI
   17       | error SEMI

   18 typeid: type ID

   19 type: simpletype
   20     | INT multibrackets
   21     | ID multibrackets

   22 simpletype: INT
   23           | ID

   24 constdecs: constdec
   25          | constdecs constdec

   26 constdec: ID LPAREN paramlist RPAREN block
   27         | ID LPAREN RPAREN block
   28         | error LPAREN
   29         | LPAREN error RPAREN
   30         | error block

   31 methdecs: methdec
   32         | methdecs methdec

   33 methdec: typeid LPAREN paramlist RPAREN block
   34        | typeid LPAREN RPAREN block
   35        | VOID ID LPAREN paramlist RPAREN block
   36        | VOID ID LPAREN RPAREN block

   37 paramlist: param
   38          | paramlist COMMA param

   39 param: typeid

   40 block: LBRACE locvardecs statements RBRACE
   41      | LBRACE locvardecs RBRACE
   42      | LBRACE statements RBRACE
   43      | LBRACE RBRACE

   44 locvardecs: locvardec
   45           | locvardecs locvardec

   46 locvardec: typeid SEMI
   47          | error SEMI

   48 statements: statement
   49           | statements statement

   50 statement: SEMI
   51          | name ASSIGN exp SEMI
   52          | name LPAREN arglist RPAREN SEMI
   53          | name LPAREN RPAREN SEMI
   54          | PRINT LPAREN arglist RPAREN SEMI
   55          | PRINT LPAREN RPAREN SEMI
   56          | condstmt
   57          | WHILE LPAREN exp RPAREN statement
   58          | RETURN exp SEMI
   59          | RETURN SEMI
   60          | block

   61 name: THIS
   62     | ID
   63     | name DOT ID
   64     | THIS bracketexps
   65     | ID bracketexps
   66     | name DOT ID bracketexps

   67 arglist: exp
   68        | arglist COMMA exp

   69 condstmt: ifstmt
   70         | ifstmt ELSE statement

   71 ifstmt: IF LPAREN exp RPAREN statement

   72 exp: name
   73    | NUMBER
   74    | NULLT
   75    | name LPAREN arglist RPAREN
   76    | name LPAREN RPAREN
   77    | READ LPAREN RPAREN
   78    | newexp
   79    | unaryop exp
   80    | exp relationop exp
   81    | exp sumop exp
   82    | exp productop exp
   83    | LPAREN exp RPAREN

   84 newexp: NEW ID LPAREN arglist RPAREN
   85       | NEW ID LPAREN RPAREN
   86       | NEW simpletype bracketexps
   87       | NEW simpletype bracketexps multibrackets

   88 bracketexps: bracketexp
   89            | bracketexps bracketexp

   90 bracketexp: LBRACK exp RBRACK

   91 multibrackets: LBRACK RBRACK
   92              | multibrackets LBRACK RBRACK

   93 unaryop: PLUS
   94        | MINUS
   95        | NOT

   96 relationop: EQ
   97           | NE
   98           | LE
   99           | GE
  100           | LT
  101           | GT

  102 sumop: PLUS
  103      | MINUS
  104      | OR

  105 productop: TIMES
  106          | DIV
  107          | MOD
  108          | AND


Terminals, with rules where they appear

$end (0) 0
error (256) 13 17 28 29 30 47
NUMBER (258) 73
ID (259) 4 18 21 23 26 27 35 36 62 63 65 66 84 85
INT (260) 20 22
VOID (261) 35 36
CLASS (262) 4
NEW (263) 84 85 86 87
PRINT (264) 54 55
READ (265) 77
RETURN (266) 58 59
WHILE (267) 57
IF (268) 71
ELSE (269) 70
THIS (270) 61 64
NULLT (271) 74
LPAREN (272) 26 27 28 29 33 34 35 36 52 53 54 55 57 71 75 76 77 83
    84 85
RPAREN (273) 26 27 29 33 34 35 36 52 53 54 55 57 71 75 76 77 83 84
    85
LBRACK (274) 90 91 92
RBRACK (275) 90 91 92
LBRACE (276) 5 6 7 8 9 10 11 12 13 40 41 42 43
RBRACE (277) 5 6 7 8 9 10 11 12 40 41 42 43
SEMI (278) 16 17 46 47 50 51 52 53 54 55 58 59
DOT (279) 63 66
COMMA (280) 38 68
ASSIGN (281) 51
EQ (282) 96
NE (283) 97
GE (284) 99
LE (285) 98
GT (286) 101
LT (287) 100
OR (288) 104
TIMES (289) 105
DIV (290) 106
MOD (291) 107
AND (292) 108
PLUS (293) 93 102
MINUS (294) 94 103
NOT (295) 95
THEN (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
input (43)
    on left: 1, on right: 0
program (44)
    on left: 2 3, on right: 1 3
classdec (45)
    on left: 4, on right: 2 3
classbody (46)
    on left: 5 6 7 8 9 10 11 12 13, on right: 4
vardecs (47)
    on left: 14 15, on right: 5 7 8 9 15
vardec (48)
    on left: 16 17, on right: 14 15
typeid (49)
    on left: 18, on right: 16 33 34 39 46
type (50)
    on left: 19 20 21, on right: 18
simpletype (51)
    on left: 22 23, on right: 19 86 87
constdecs (52)
    on left: 24 25, on right: 5 6 8 10 25
constdec (53)
    on left: 26 27 28 29 30, on right: 24 25
methdecs (54)
    on left: 31 32, on right: 5 6 7 11 32
methdec (55)
    on left: 33 34 35 36, on right: 31 32
paramlist (56)
    on left: 37 38, on right: 26 33 35 38
param (57)
    on left: 39, on right: 37 38
block (58)
    on left: 40 41 42 43, on right: 26 27 30 33 34 35 36 60
locvardecs (59)
    on left: 44 45, on right: 40 41 45
locvardec (60)
    on left: 46 47, on right: 44 45
statements (61)
    on left: 48 49, on right: 40 42 49
statement (62)
    on left: 50 51 52 53 54 55 56 57 58 59 60, on right: 48 49 57 70
    71
name (63)
    on left: 61 62 63 64 65 66, on right: 51 52 53 63 66 72 75 76
arglist (64)
    on left: 67 68, on right: 52 54 68 75 84
condstmt (65)
    on left: 69 70, on right: 56
ifstmt (66)
    on left: 71, on right: 69 70
exp (67)
    on left: 72 73 74 75 76 77 78 79 80 81 82 83, on right: 51 57 58
    67 68 71 79 80 81 82 83 90
newexp (68)
    on left: 84 85 86 87, on right: 78
bracketexps (69)
    on left: 88 89, on right: 64 65 66 86 87 89
bracketexp (70)
    on left: 90, on right: 88 89
multibrackets (71)
    on left: 91 92, on right: 20 21 87 92
unaryop (72)
    on left: 93 94 95, on right: 79
relationop (73)
    on left: 96 97 98 99 100 101, on right: 80
sumop (74)
    on left: 102 103 104, on right: 81
productop (75)
    on left: 105 106 107 108, on right: 82


State 0

    0 $accept: . input $end

    CLASS  shift, and go to state 1

    input     go to state 2
    program   go to state 3
    classdec  go to state 4


State 1

    4 classdec: CLASS . ID classbody

    ID  shift, and go to state 5


State 2

    0 $accept: input . $end

    $end  shift, and go to state 6


State 3

    1 input: program .
    3 program: program . classdec

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (input)

    classdec  go to state 7


State 4

    2 program: classdec .

    $default  reduce using rule 2 (program)


State 5

    4 classdec: CLASS ID . classbody

    error   shift, and go to state 8
    LBRACE  shift, and go to state 9

    classbody  go to state 10


State 6

    0 $accept: input $end .

    $default  accept


State 7

    3 program: program classdec .

    $default  reduce using rule 3 (program)


State 8

   13 classbody: error . LBRACE

    LBRACE  shift, and go to state 11


State 9

    5 classbody: LBRACE . vardecs constdecs methdecs RBRACE
    6          | LBRACE . constdecs methdecs RBRACE
    7          | LBRACE . vardecs methdecs RBRACE
    8          | LBRACE . vardecs constdecs RBRACE
    9          | LBRACE . vardecs RBRACE
   10          | LBRACE . constdecs RBRACE
   11          | LBRACE . methdecs RBRACE
   12          | LBRACE . RBRACE

    error   shift, and go to state 12
    ID      shift, and go to state 13
    INT     shift, and go to state 14
    VOID    shift, and go to state 15
    LPAREN  shift, and go to state 16
    RBRACE  shift, and go to state 17

    vardecs     go to state 18
    vardec      go to state 19
    typeid      go to state 20
    type        go to state 21
    simpletype  go to state 22
    constdecs   go to state 23
    constdec    go to state 24
    methdecs    go to state 25
    methdec     go to state 26


State 10

    4 classdec: CLASS ID classbody .

    $default  reduce using rule 4 (classdec)


State 11

   13 classbody: error LBRACE .

    $default  reduce using rule 13 (classbody)


State 12

   17 vardec: error . SEMI
   28 constdec: error . LPAREN
   30         | error . block

    LPAREN  shift, and go to state 27
    LBRACE  shift, and go to state 28
    SEMI    shift, and go to state 29

    block  go to state 30


State 13

   21 type: ID . multibrackets
   23 simpletype: ID .
   26 constdec: ID . LPAREN paramlist RPAREN block
   27         | ID . LPAREN RPAREN block

    LPAREN  shift, and go to state 31
    LBRACK  shift, and go to state 32

    $default  reduce using rule 23 (simpletype)

    multibrackets  go to state 33


State 14

   20 type: INT . multibrackets
   22 simpletype: INT .

    LBRACK  shift, and go to state 32

    $default  reduce using rule 22 (simpletype)

    multibrackets  go to state 34


State 15

   35 methdec: VOID . ID LPAREN paramlist RPAREN block
   36        | VOID . ID LPAREN RPAREN block

    ID  shift, and go to state 35


State 16

   29 constdec: LPAREN . error RPAREN

    error  shift, and go to state 36


State 17

   12 classbody: LBRACE RBRACE .

    $default  reduce using rule 12 (classbody)


State 18

    5 classbody: LBRACE vardecs . constdecs methdecs RBRACE
    7          | LBRACE vardecs . methdecs RBRACE
    8          | LBRACE vardecs . constdecs RBRACE
    9          | LBRACE vardecs . RBRACE
   15 vardecs: vardecs . vardec

    error   shift, and go to state 12
    ID      shift, and go to state 13
    INT     shift, and go to state 14
    VOID    shift, and go to state 15
    LPAREN  shift, and go to state 16
    RBRACE  shift, and go to state 37

    vardec      go to state 38
    typeid      go to state 20
    type        go to state 21
    simpletype  go to state 22
    constdecs   go to state 39
    constdec    go to state 24
    methdecs    go to state 40
    methdec     go to state 26


State 19

   14 vardecs: vardec .

    $default  reduce using rule 14 (vardecs)


State 20

   16 vardec: typeid . SEMI
   33 methdec: typeid . LPAREN paramlist RPAREN block
   34        | typeid . LPAREN RPAREN block

    LPAREN  shift, and go to state 41
    SEMI    shift, and go to state 42


State 21

   18 typeid: type . ID

    ID  shift, and go to state 43


State 22

   19 type: simpletype .

    $default  reduce using rule 19 (type)


State 23

    6 classbody: LBRACE constdecs . methdecs RBRACE
   10          | LBRACE constdecs . RBRACE
   25 constdecs: constdecs . constdec

    error   shift, and go to state 44
    ID      shift, and go to state 13
    INT     shift, and go to state 14
    VOID    shift, and go to state 15
    LPAREN  shift, and go to state 16
    RBRACE  shift, and go to state 45

    typeid      go to state 46
    type        go to state 21
    simpletype  go to state 22
    constdec    go to state 47
    methdecs    go to state 48
    methdec     go to state 26


State 24

   24 constdecs: constdec .

    $default  reduce using rule 24 (constdecs)


State 25

   11 classbody: LBRACE methdecs . RBRACE
   32 methdecs: methdecs . methdec

    ID      shift, and go to state 49
    INT     shift, and go to state 14
    VOID    shift, and go to state 15
    RBRACE  shift, and go to state 50

    typeid      go to state 46
    type        go to state 21
    simpletype  go to state 22
    methdec     go to state 51


State 26

   31 methdecs: methdec .

    $default  reduce using rule 31 (methdecs)


State 27

   28 constdec: error LPAREN .

    $default  reduce using rule 28 (constdec)


State 28

   40 block: LBRACE . locvardecs statements RBRACE
   41      | LBRACE . locvardecs RBRACE
   42      | LBRACE . statements RBRACE
   43      | LBRACE . RBRACE

    error   shift, and go to state 52
    ID      shift, and go to state 53
    INT     shift, and go to state 14
    PRINT   shift, and go to state 54
    RETURN  shift, and go to state 55
    WHILE   shift, and go to state 56
    IF      shift, and go to state 57
    THIS    shift, and go to state 58
    LBRACE  shift, and go to state 28
    RBRACE  shift, and go to state 59
    SEMI    shift, and go to state 60

    typeid      go to state 61
    type        go to state 21
    simpletype  go to state 22
    block       go to state 62
    locvardecs  go to state 63
    locvardec   go to state 64
    statements  go to state 65
    statement   go to state 66
    name        go to state 67
    condstmt    go to state 68
    ifstmt      go to state 69


State 29

   17 vardec: error SEMI .

    $default  reduce using rule 17 (vardec)


State 30

   30 constdec: error block .

    $default  reduce using rule 30 (constdec)


State 31

   26 constdec: ID LPAREN . paramlist RPAREN block
   27         | ID LPAREN . RPAREN block

    ID      shift, and go to state 49
    INT     shift, and go to state 14
    RPAREN  shift, and go to state 70

    typeid      go to state 71
    type        go to state 21
    simpletype  go to state 22
    paramlist   go to state 72
    param       go to state 73


State 32

   91 multibrackets: LBRACK . RBRACK

    RBRACK  shift, and go to state 74


State 33

   21 type: ID multibrackets .
   92 multibrackets: multibrackets . LBRACK RBRACK

    LBRACK  shift, and go to state 75

    $default  reduce using rule 21 (type)


State 34

   20 type: INT multibrackets .
   92 multibrackets: multibrackets . LBRACK RBRACK

    LBRACK  shift, and go to state 75

    $default  reduce using rule 20 (type)


State 35

   35 methdec: VOID ID . LPAREN paramlist RPAREN block
   36        | VOID ID . LPAREN RPAREN block

    LPAREN  shift, and go to state 76


State 36

   29 constdec: LPAREN error . RPAREN

    RPAREN  shift, and go to state 77


State 37

    9 classbody: LBRACE vardecs RBRACE .

    $default  reduce using rule 9 (classbody)


State 38

   15 vardecs: vardecs vardec .

    $default  reduce using rule 15 (vardecs)


State 39

    5 classbody: LBRACE vardecs constdecs . methdecs RBRACE
    8          | LBRACE vardecs constdecs . RBRACE
   25 constdecs: constdecs . constdec

    error   shift, and go to state 44
    ID      shift, and go to state 13
    INT     shift, and go to state 14
    VOID    shift, and go to state 15
    LPAREN  shift, and go to state 16
    RBRACE  shift, and go to state 78

    typeid      go to state 46
    type        go to state 21
    simpletype  go to state 22
    constdec    go to state 47
    methdecs    go to state 79
    methdec     go to state 26


State 40

    7 classbody: LBRACE vardecs methdecs . RBRACE
   32 methdecs: methdecs . methdec

    ID      shift, and go to state 49
    INT     shift, and go to state 14
    VOID    shift, and go to state 15
    RBRACE  shift, and go to state 80

    typeid      go to state 46
    type        go to state 21
    simpletype  go to state 22
    methdec     go to state 51


State 41

   33 methdec: typeid LPAREN . paramlist RPAREN block
   34        | typeid LPAREN . RPAREN block

    ID      shift, and go to state 49
    INT     shift, and go to state 14
    RPAREN  shift, and go to state 81

    typeid      go to state 71
    type        go to state 21
    simpletype  go to state 22
    paramlist   go to state 82
    param       go to state 73


State 42

   16 vardec: typeid SEMI .

    $default  reduce using rule 16 (vardec)


State 43

   18 typeid: type ID .

    $default  reduce using rule 18 (typeid)


State 44

   28 constdec: error . LPAREN
   30         | error . block

    LPAREN  shift, and go to state 27
    LBRACE  shift, and go to state 28

    block  go to state 30


State 45

   10 classbody: LBRACE constdecs RBRACE .

    $default  reduce using rule 10 (classbody)


State 46

   33 methdec: typeid . LPAREN paramlist RPAREN block
   34        | typeid . LPAREN RPAREN block

    LPAREN  shift, and go to state 41


State 47

   25 constdecs: constdecs constdec .

    $default  reduce using rule 25 (constdecs)


State 48

    6 classbody: LBRACE constdecs methdecs . RBRACE
   32 methdecs: methdecs . methdec

    ID      shift, and go to state 49
    INT     shift, and go to state 14
    VOID    shift, and go to state 15
    RBRACE  shift, and go to state 83

    typeid      go to state 46
    type        go to state 21
    simpletype  go to state 22
    methdec     go to state 51


State 49

   21 type: ID . multibrackets
   23 simpletype: ID .

    LBRACK  shift, and go to state 32

    $default  reduce using rule 23 (simpletype)

    multibrackets  go to state 33


State 50

   11 classbody: LBRACE methdecs RBRACE .

    $default  reduce using rule 11 (classbody)


State 51

   32 methdecs: methdecs methdec .

    $default  reduce using rule 32 (methdecs)


State 52

   47 locvardec: error . SEMI

    SEMI  shift, and go to state 84


State 53

   21 type: ID . multibrackets
   23 simpletype: ID .
   62 name: ID .
   65     | ID . bracketexps

    LBRACK  shift, and go to state 85

    ID        reduce using rule 23 (simpletype)
    $default  reduce using rule 62 (name)

    bracketexps    go to state 86
    bracketexp     go to state 87
    multibrackets  go to state 33


State 54

   54 statement: PRINT . LPAREN arglist RPAREN SEMI
   55          | PRINT . LPAREN RPAREN SEMI

    LPAREN  shift, and go to state 88


State 55

   58 statement: RETURN . exp SEMI
   59          | RETURN . SEMI

    NUMBER  shift, and go to state 89
    ID      shift, and go to state 90
    NEW     shift, and go to state 91
    READ    shift, and go to state 92
    THIS    shift, and go to state 58
    NULLT   shift, and go to state 93
    LPAREN  shift, and go to state 94
    SEMI    shift, and go to state 95
    PLUS    shift, and go to state 96
    MINUS   shift, and go to state 97
    NOT     shift, and go to state 98

    name     go to state 99
    exp      go to state 100
    newexp   go to state 101
    unaryop  go to state 102


State 56

   57 statement: WHILE . LPAREN exp RPAREN statement

    LPAREN  shift, and go to state 103


State 57

   71 ifstmt: IF . LPAREN exp RPAREN statement

    LPAREN  shift, and go to state 104


State 58

   61 name: THIS .
   64     | THIS . bracketexps

    LBRACK  shift, and go to state 105

    $default  reduce using rule 61 (name)

    bracketexps  go to state 106
    bracketexp   go to state 87


State 59

   43 block: LBRACE RBRACE .

    $default  reduce using rule 43 (block)


State 60

   50 statement: SEMI .

    $default  reduce using rule 50 (statement)


State 61

   46 locvardec: typeid . SEMI

    SEMI  shift, and go to state 107


State 62

   60 statement: block .

    $default  reduce using rule 60 (statement)


State 63

   40 block: LBRACE locvardecs . statements RBRACE
   41      | LBRACE locvardecs . RBRACE
   45 locvardecs: locvardecs . locvardec

    error   shift, and go to state 52
    ID      shift, and go to state 53
    INT     shift, and go to state 14
    PRINT   shift, and go to state 54
    RETURN  shift, and go to state 55
    WHILE   shift, and go to state 56
    IF      shift, and go to state 57
    THIS    shift, and go to state 58
    LBRACE  shift, and go to state 28
    RBRACE  shift, and go to state 108
    SEMI    shift, and go to state 60

    typeid      go to state 61
    type        go to state 21
    simpletype  go to state 22
    block       go to state 62
    locvardec   go to state 109
    statements  go to state 110
    statement   go to state 66
    name        go to state 67
    condstmt    go to state 68
    ifstmt      go to state 69


State 64

   44 locvardecs: locvardec .

    $default  reduce using rule 44 (locvardecs)


State 65

   42 block: LBRACE statements . RBRACE
   49 statements: statements . statement

    ID      shift, and go to state 90
    PRINT   shift, and go to state 54
    RETURN  shift, and go to state 55
    WHILE   shift, and go to state 56
    IF      shift, and go to state 57
    THIS    shift, and go to state 58
    LBRACE  shift, and go to state 28
    RBRACE  shift, and go to state 111
    SEMI    shift, and go to state 60

    block      go to state 62
    statement  go to state 112
    name       go to state 67
    condstmt   go to state 68
    ifstmt     go to state 69


State 66

   48 statements: statement .

    $default  reduce using rule 48 (statements)


State 67

   51 statement: name . ASSIGN exp SEMI
   52          | name . LPAREN arglist RPAREN SEMI
   53          | name . LPAREN RPAREN SEMI
   63 name: name . DOT ID
   66     | name . DOT ID bracketexps

    LPAREN  shift, and go to state 113
    DOT     shift, and go to state 114
    ASSIGN  shift, and go to state 115


State 68

   56 statement: condstmt .

    $default  reduce using rule 56 (statement)


State 69

   69 condstmt: ifstmt .
   70         | ifstmt . ELSE statement

    ELSE  shift, and go to state 116

    $default  reduce using rule 69 (condstmt)


State 70

   27 constdec: ID LPAREN RPAREN . block

    LBRACE  shift, and go to state 28

    block  go to state 117


State 71

   39 param: typeid .

    $default  reduce using rule 39 (param)


State 72

   26 constdec: ID LPAREN paramlist . RPAREN block
   38 paramlist: paramlist . COMMA param

    RPAREN  shift, and go to state 118
    COMMA   shift, and go to state 119


State 73

   37 paramlist: param .

    $default  reduce using rule 37 (paramlist)


State 74

   91 multibrackets: LBRACK RBRACK .

    $default  reduce using rule 91 (multibrackets)


State 75

   92 multibrackets: multibrackets LBRACK . RBRACK

    RBRACK  shift, and go to state 120


State 76

   35 methdec: VOID ID LPAREN . paramlist RPAREN block
   36        | VOID ID LPAREN . RPAREN block

    ID      shift, and go to state 49
    INT     shift, and go to state 14
    RPAREN  shift, and go to state 121

    typeid      go to state 71
    type        go to state 21
    simpletype  go to state 22
    paramlist   go to state 122
    param       go to state 73


State 77

   29 constdec: LPAREN error RPAREN .

    $default  reduce using rule 29 (constdec)


State 78

    8 classbody: LBRACE vardecs constdecs RBRACE .

    $default  reduce using rule 8 (classbody)


State 79

    5 classbody: LBRACE vardecs constdecs methdecs . RBRACE
   32 methdecs: methdecs . methdec

    ID      shift, and go to state 49
    INT     shift, and go to state 14
    VOID    shift, and go to state 15
    RBRACE  shift, and go to state 123

    typeid      go to state 46
    type        go to state 21
    simpletype  go to state 22
    methdec     go to state 51


State 80

    7 classbody: LBRACE vardecs methdecs RBRACE .

    $default  reduce using rule 7 (classbody)


State 81

   34 methdec: typeid LPAREN RPAREN . block

    LBRACE  shift, and go to state 28

    block  go to state 124


State 82

   33 methdec: typeid LPAREN paramlist . RPAREN block
   38 paramlist: paramlist . COMMA param

    RPAREN  shift, and go to state 125
    COMMA   shift, and go to state 119


State 83

    6 classbody: LBRACE constdecs methdecs RBRACE .

    $default  reduce using rule 6 (classbody)


State 84

   47 locvardec: error SEMI .

    $default  reduce using rule 47 (locvardec)


State 85

   90 bracketexp: LBRACK . exp RBRACK
   91 multibrackets: LBRACK . RBRACK

    NUMBER  shift, and go to state 89
    ID      shift, and go to state 90
    NEW     shift, and go to state 91
    READ    shift, and go to state 92
    THIS    shift, and go to state 58
    NULLT   shift, and go to state 93
    LPAREN  shift, and go to state 94
    RBRACK  shift, and go to state 74
    PLUS    shift, and go to state 96
    MINUS   shift, and go to state 97
    NOT     shift, and go to state 98

    name     go to state 99
    exp      go to state 126
    newexp   go to state 101
    unaryop  go to state 102


State 86

   65 name: ID bracketexps .
   89 bracketexps: bracketexps . bracketexp

    LBRACK  shift, and go to state 105

    $default  reduce using rule 65 (name)

    bracketexp  go to state 127


State 87

   88 bracketexps: bracketexp .

    $default  reduce using rule 88 (bracketexps)


State 88

   54 statement: PRINT LPAREN . arglist RPAREN SEMI
   55          | PRINT LPAREN . RPAREN SEMI

    NUMBER  shift, and go to state 89
    ID      shift, and go to state 90
    NEW     shift, and go to state 91
    READ    shift, and go to state 92
    THIS    shift, and go to state 58
    NULLT   shift, and go to state 93
    LPAREN  shift, and go to state 94
    RPAREN  shift, and go to state 128
    PLUS    shift, and go to state 96
    MINUS   shift, and go to state 97
    NOT     shift, and go to state 98

    name     go to state 99
    arglist  go to state 129
    exp      go to state 130
    newexp   go to state 101
    unaryop  go to state 102


State 89

   73 exp: NUMBER .

    $default  reduce using rule 73 (exp)


State 90

   62 name: ID .
   65     | ID . bracketexps

    LBRACK  shift, and go to state 105

    $default  reduce using rule 62 (name)

    bracketexps  go to state 86
    bracketexp   go to state 87


State 91

   84 newexp: NEW . ID LPAREN arglist RPAREN
   85       | NEW . ID LPAREN RPAREN
   86       | NEW . simpletype bracketexps
   87       | NEW . simpletype bracketexps multibrackets

    ID   shift, and go to state 131
    INT  shift, and go to state 132

    simpletype  go to state 133


State 92

   77 exp: READ . LPAREN RPAREN

    LPAREN  shift, and go to state 134


State 93

   74 exp: NULLT .

    $default  reduce using rule 74 (exp)


State 94

   83 exp: LPAREN . exp RPAREN

    NUMBER  shift, and go to state 89
    ID      shift, and go to state 90
    NEW     shift, and go to state 91
    READ    shift, and go to state 92
    THIS    shift, and go to state 58
    NULLT   shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 96
    MINUS   shift, and go to state 97
    NOT     shift, and go to state 98

    name     go to state 99
    exp      go to state 135
    newexp   go to state 101
    unaryop  go to state 102


State 95

   59 statement: RETURN SEMI .

    $default  reduce using rule 59 (statement)


State 96

   93 unaryop: PLUS .

    $default  reduce using rule 93 (unaryop)


State 97

   94 unaryop: MINUS .

    $default  reduce using rule 94 (unaryop)


State 98

   95 unaryop: NOT .

    $default  reduce using rule 95 (unaryop)


State 99

   63 name: name . DOT ID
   66     | name . DOT ID bracketexps
   72 exp: name .
   75    | name . LPAREN arglist RPAREN
   76    | name . LPAREN RPAREN

    LPAREN  shift, and go to state 136
    DOT     shift, and go to state 114

    $default  reduce using rule 72 (exp)


State 100

   58 statement: RETURN exp . SEMI
   80 exp: exp . relationop exp
   81    | exp . sumop exp
   82    | exp . productop exp

    SEMI   shift, and go to state 137
    EQ     shift, and go to state 138
    NE     shift, and go to state 139
    GE     shift, and go to state 140
    LE     shift, and go to state 141
    GT     shift, and go to state 142
    LT     shift, and go to state 143
    OR     shift, and go to state 144
    TIMES  shift, and go to state 145
    DIV    shift, and go to state 146
    MOD    shift, and go to state 147
    AND    shift, and go to state 148
    PLUS   shift, and go to state 149
    MINUS  shift, and go to state 150

    relationop  go to state 151
    sumop       go to state 152
    productop   go to state 153


State 101

   78 exp: newexp .

    $default  reduce using rule 78 (exp)


State 102

   79 exp: unaryop . exp

    NUMBER  shift, and go to state 89
    ID      shift, and go to state 90
    NEW     shift, and go to state 91
    READ    shift, and go to state 92
    THIS    shift, and go to state 58
    NULLT   shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 96
    MINUS   shift, and go to state 97
    NOT     shift, and go to state 98

    name     go to state 99
    exp      go to state 154
    newexp   go to state 101
    unaryop  go to state 102


State 103

   57 statement: WHILE LPAREN . exp RPAREN statement

    NUMBER  shift, and go to state 89
    ID      shift, and go to state 90
    NEW     shift, and go to state 91
    READ    shift, and go to state 92
    THIS    shift, and go to state 58
    NULLT   shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 96
    MINUS   shift, and go to state 97
    NOT     shift, and go to state 98

    name     go to state 99
    exp      go to state 155
    newexp   go to state 101
    unaryop  go to state 102


State 104

   71 ifstmt: IF LPAREN . exp RPAREN statement

    NUMBER  shift, and go to state 89
    ID      shift, and go to state 90
    NEW     shift, and go to state 91
    READ    shift, and go to state 92
    THIS    shift, and go to state 58
    NULLT   shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 96
    MINUS   shift, and go to state 97
    NOT     shift, and go to state 98

    name     go to state 99
    exp      go to state 156
    newexp   go to state 101
    unaryop  go to state 102


State 105

   90 bracketexp: LBRACK . exp RBRACK

    NUMBER  shift, and go to state 89
    ID      shift, and go to state 90
    NEW     shift, and go to state 91
    READ    shift, and go to state 92
    THIS    shift, and go to state 58
    NULLT   shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 96
    MINUS   shift, and go to state 97
    NOT     shift, and go to state 98

    name     go to state 99
    exp      go to state 126
    newexp   go to state 101
    unaryop  go to state 102


State 106

   64 name: THIS bracketexps .
   89 bracketexps: bracketexps . bracketexp

    LBRACK  shift, and go to state 105

    $default  reduce using rule 64 (name)

    bracketexp  go to state 127


State 107

   46 locvardec: typeid SEMI .

    $default  reduce using rule 46 (locvardec)


State 108

   41 block: LBRACE locvardecs RBRACE .

    $default  reduce using rule 41 (block)


State 109

   45 locvardecs: locvardecs locvardec .

    $default  reduce using rule 45 (locvardecs)


State 110

   40 block: LBRACE locvardecs statements . RBRACE
   49 statements: statements . statement

    ID      shift, and go to state 90
    PRINT   shift, and go to state 54
    RETURN  shift, and go to state 55
    WHILE   shift, and go to state 56
    IF      shift, and go to state 57
    THIS    shift, and go to state 58
    LBRACE  shift, and go to state 28
    RBRACE  shift, and go to state 157
    SEMI    shift, and go to state 60

    block      go to state 62
    statement  go to state 112
    name       go to state 67
    condstmt   go to state 68
    ifstmt     go to state 69


State 111

   42 block: LBRACE statements RBRACE .

    $default  reduce using rule 42 (block)


State 112

   49 statements: statements statement .

    $default  reduce using rule 49 (statements)


State 113

   52 statement: name LPAREN . arglist RPAREN SEMI
   53          | name LPAREN . RPAREN SEMI

    NUMBER  shift, and go to state 89
    ID      shift, and go to state 90
    NEW     shift, and go to state 91
    READ    shift, and go to state 92
    THIS    shift, and go to state 58
    NULLT   shift, and go to state 93
    LPAREN  shift, and go to state 94
    RPAREN  shift, and go to state 158
    PLUS    shift, and go to state 96
    MINUS   shift, and go to state 97
    NOT     shift, and go to state 98

    name     go to state 99
    arglist  go to state 159
    exp      go to state 130
    newexp   go to state 101
    unaryop  go to state 102


State 114

   63 name: name DOT . ID
   66     | name DOT . ID bracketexps

    ID  shift, and go to state 160


State 115

   51 statement: name ASSIGN . exp SEMI

    NUMBER  shift, and go to state 89
    ID      shift, and go to state 90
    NEW     shift, and go to state 91
    READ    shift, and go to state 92
    THIS    shift, and go to state 58
    NULLT   shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 96
    MINUS   shift, and go to state 97
    NOT     shift, and go to state 98

    name     go to state 99
    exp      go to state 161
    newexp   go to state 101
    unaryop  go to state 102


State 116

   70 condstmt: ifstmt ELSE . statement

    ID      shift, and go to state 90
    PRINT   shift, and go to state 54
    RETURN  shift, and go to state 55
    WHILE   shift, and go to state 56
    IF      shift, and go to state 57
    THIS    shift, and go to state 58
    LBRACE  shift, and go to state 28
    SEMI    shift, and go to state 60

    block      go to state 62
    statement  go to state 162
    name       go to state 67
    condstmt   go to state 68
    ifstmt     go to state 69


State 117

   27 constdec: ID LPAREN RPAREN block .

    $default  reduce using rule 27 (constdec)


State 118

   26 constdec: ID LPAREN paramlist RPAREN . block

    LBRACE  shift, and go to state 28

    block  go to state 163


State 119

   38 paramlist: paramlist COMMA . param

    ID   shift, and go to state 49
    INT  shift, and go to state 14

    typeid      go to state 71
    type        go to state 21
    simpletype  go to state 22
    param       go to state 164


State 120

   92 multibrackets: multibrackets LBRACK RBRACK .

    $default  reduce using rule 92 (multibrackets)


State 121

   36 methdec: VOID ID LPAREN RPAREN . block

    LBRACE  shift, and go to state 28

    block  go to state 165


State 122

   35 methdec: VOID ID LPAREN paramlist . RPAREN block
   38 paramlist: paramlist . COMMA param

    RPAREN  shift, and go to state 166
    COMMA   shift, and go to state 119


State 123

    5 classbody: LBRACE vardecs constdecs methdecs RBRACE .

    $default  reduce using rule 5 (classbody)


State 124

   34 methdec: typeid LPAREN RPAREN block .

    $default  reduce using rule 34 (methdec)


State 125

   33 methdec: typeid LPAREN paramlist RPAREN . block

    LBRACE  shift, and go to state 28

    block  go to state 167


State 126

   80 exp: exp . relationop exp
   81    | exp . sumop exp
   82    | exp . productop exp
   90 bracketexp: LBRACK exp . RBRACK
